--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pydantic==2.11.7
 python-dotenv==1.1.1
 pyytlounge==3.2.0
 google-genai==1.33.0
+paho-mqtt==2.1.0
 pytest==8.4.2
 pytest-asyncio==1.2.0
 httpx==0.28.1
